--- a/paper/practicum_marcelo_grossi.bib
+++ b/paper/practicum_marcelo_grossi.bib
@@ -164,3 +164,11 @@ year = {2007},
   year={2012},
   publisher={Wiley Online Library}
 }
+@Book{box2008time,
+ author = { George E P Box and Gwilym M Jenkins and Gregory C Reinsel},
+ title = {Time series analysis : forecasting and control},
+ publisher = {John Wiley},
+ year = {2008},
+ address = {Hoboken, N.J},
+ isbn = {978-0-470-27284-8}
+}
